prepared the app for deployment, used environment variables to secure confidential information, used helmet for enhanced security and used morgan to log the http requests

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ SENDGRID_API_KEY='SG.ztOdrQ_QR_uj_cAHBB_bJw.9Lw-2ZSD_azN6S3udedEeRa4rai4IGIXgl5A
 AWS_S3_ACCESS_KEY_ID='AKIAZEHX35J6CUL4BPHM'
 AWS_S3_SECRET_ACCESS_KEY='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'
 AWS_S3_BUCKET_NAME='expensetrackerbynishant'
+DB_NAME='expense-tracker'
+DB_USERNAME='root'
+DB_PASSWORD='YahaAbhiIsiWaqt@0'
+DB_HOST='localhost'
