--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "razorpay": "^2.8.4",
     "sequelize": "^6.27.0",
